feat: add internationalization support and new command-line tools
- Add locale support with English and Chinese translations
- Introduce new jv and jvv command-line tools
- Replace jvc.rs with improved command structure
- Add utility modules for language selection and markdown coloring
- Update configuration and dependencies

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,16 @@
 [build]
 target-dir = "./.temp/target/"
 
+[alias]
+dev = "run --manifest-path crates/cli_publisher/Cargo.toml"
+release = "run --manifest-path crates/cli_publisher/Cargo.toml --release"
+
 [publish]
 target-dir = "./.temp/publish/"
-binaries = ["jvc", "jvc.exe"]
+binaries = [
+    "jv",
+    "jv.exe",
+
+    "jvv",
+    "jvv.exe"
+]
