--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,6 @@
 name = "just_enough_vcs_cli"
 edition = "2024"
 
-[dependencies.just_enough_vcs]
-git = "https://github.com/JustEnoughVCS/VersionControl"
-features = ["all"]
-
 [workspace]
 members = ["crates/cli_publisher"]
 
@@ -32,9 +28,13 @@ panic = "abort"
 strip = "symbols"
 
 [dependencies]
+# Just Enough VCS
+just_enough_vcs = { git = "https://github.com/JustEnoughVCS/VersionControl", features = [
+    "all",
+] }
 
 # Command Line
-clap = "4.5"
+clap = { version = "4.5", features = ["derive"] }
 
 # Logging
 log = "0.4"
@@ -45,3 +45,9 @@ tokio = { version = "1", features = ["full"] }
 
 # Color
 colored = "2.0"
+
+# i18n
+rust-i18n = "3"
+
+# Regex
+regex = "1.12.1"
