--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "just_enough_vcs_cli"
 edition = "2024"
 
 [workspace]
-members = ["crates/cli_publisher"]
+members = ["crates/build_helper"]
 
 [workspace.package]
 version = "0.1.0"
@@ -35,6 +35,9 @@ just_enough_vcs = { git = "https://github.com/JustEnoughVCS/VersionControl", fea
 
 # Command Line
 clap = { version = "4.5", features = ["derive"] }
+
+# Time
+chrono = "0.4"
 
 # Logging
 log = "0.4"
