--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,10 @@ lto = "fat"
 panic = "abort"
 strip = "symbols"
 
+[build-dependencies]
+chrono = "0.4"
+toml = "0.9"
+
 [dependencies]
 # Just Enough VCS
 just_enough_vcs = { path = "../VersionControl", features = ["all"] }
