feat: enhance build and publishing system
- Add file copy configurations in .cargo/config.toml
- Extend exporter to support copying additional files
- Create bin directory for organized binary distribution
- Add support for copying shell scripts and completion files

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -13,3 +13,15 @@ binaries = [
     "jvv",
     "jvv.exe",
 ]
+
+[copies.completion_jv]
+from = "scripts/completion_jv.sh"
+to = "completion_jv.sh"
+
+[copies.completion_jvv]
+from = "scripts/completion_jvv.sh"
+to = "completion_jvv.sh"
+
+[copies.entry]
+from = "scripts/cli.sh"
+to = "cli.sh"
