update: upgrade dependencies and add new modules
- Upgrade colored from 2.2.0 to 3.0.0
- Remove duplicate colored dependency
- Add strip-ansi-escapes for ANSI escape sequence handling
- Add ahash for high-performance hashing
- Add data_struct and vcs_docs modules

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,8 +49,9 @@ env_logger = "0.11"
 # Async
 tokio = { version = "1", features = ["full"] }
 
-# Color
-colored = "2.0"
+# Display
+colored = "3.0"
+strip-ansi-escapes = "0.2.1"
 
 # i18n
 rust-i18n = "3"
