--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,14 +19,14 @@ lto = false
 panic = "unwind"
 
 [profile.release]
-opt-level = 3
+opt-level = "z"
 debug = false
-split-debuginfo = "off"
+split-defoinfo = "off"
 codegen-units = 1
 incremental = false
-lto = "fat"
+lto = "thin"
 panic = "abort"
-strip = "symbols"
+strip = true
 
 [build-dependencies]
 chrono = "0.4"
@@ -58,3 +58,6 @@ rust-i18n = "3"
 
 # Regex
 regex = "1.12.1"
+
+# File
+walkdir = "2.5.0"
