Add crossterm dependency and implement jvii editor
- Add crossterm crate for terminal UI capabilities
- Update jvii editor with proper status bar and keyboard hints
- Add i18n support for editor interface
- Remove default nano editor configuration from shell scripts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,9 @@ tokio = { version = "1", features = ["full"] }
 colored = "3.0"
 strip-ansi-escapes = "0.2.1"
 
+# Terminal
+crossterm = "0.27"
+
 # i18n
 rust-i18n = "3"
 
