Add Windows installer script generation to build process
- Generate Inno Setup installer script from template at build time
- Extract author and homepage from Cargo.toml for script customization
- Add generated installer script to .gitignore to avoid committing build
  artifacts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "just_enough_vcs_cli"
 edition = "2024"
 build = "build.rs"
+authors = ["JustEnoughVCS Team"]
+homepage = "http://jvcs.cc/"
 
 [workspace]
 members = ["crates/build_helper"]
