--- a/src/data/compile_info.rs.template
+++ b/src/data/compile_info.rs.template
@@ -5,6 +5,8 @@ pub struct CompileInfo {
     pub toolchain: String,
 
     pub cli_version: String,
+    pub build_branch: String,
+    pub build_commit: String,
 }
 
 impl Default for CompileInfo {
@@ -15,6 +17,8 @@ impl Default for CompileInfo {
             platform: "{platform}".to_string(),
             toolchain: "{toolchain}".to_string(),
             cli_version: "{version}".to_string(),
+            build_branch: "{branch}".to_string(),
+            build_commit: "{commit}".to_string(),
         }
     }
 }
