--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -20,16 +20,16 @@ binaries = [
 
 # Completions
 [copies.completion_jv_bash]
-from = "scripts/completions/bash/completion_jv.sh"
+from = "scripts/deploy/completions/bash/completion_jv.sh"
 to = "completions/bash/completion_jv.sh"
 
 [copies.completion_jvv_bash]
-from = "scripts/completions/bash/completion_jvv.sh"
+from = "scripts/deploy/completions/bash/completion_jvv.sh"
 to = "completions/bash/completion_jvv.sh"
 
 # Entries
 [copies.entry_bash]
-from = "scripts/jv_cli.sh"
+from = "scripts/deploy/jv_cli.sh"
 to = "jv_cli.sh"
 
 ##################
@@ -38,16 +38,16 @@ to = "jv_cli.sh"
 
 # Completions
 [copies.completion_jv_powershell]
-from = "scripts/completions/powershell/completion_jv.ps1"
+from = "scripts/deploy/completions/powershell/completion_jv.ps1"
 to = "completions/powershell/completion_jv.ps1"
 
 [copies.completion_jvv_powershell]
-from = "scripts/completions/powershell/completion_jvv.ps1"
+from = "scripts/deploy/completions/powershell/completion_jvv.ps1"
 to = "completions/powershell/completion_jvv.ps1"
 
 # Entries
 [copies.entry_powershell]
-from = "scripts/jv_cli.ps1"
+from = "scripts/deploy/jv_cli.ps1"
 to = "jv_cli.ps1"
 
 ##################
@@ -55,9 +55,9 @@ to = "jv_cli.ps1"
 ##################
 
 [copies.zsh_plugin]
-from = "scripts/zsh_support/jvcs.plugin.zsh"
+from = "scripts/deploy/zsh_support/jvcs.plugin.zsh"
 to = "scripts/zsh_support/jvcs.plugin.zsh"
 
 [copies.zsh_plugin_installation]
-from = "scripts/zsh_support/how_to_install.md"
+from = "scripts/deploy/zsh_support/how_to_install.md"
 to = "scripts/zsh_support/how_to_install.md"
