--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,10 @@ toml = "0.9"
 # Just Enough VCS
 just_enough_vcs = { path = "../VersionControl", features = ["all"] }
 
+# Serialize
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+
 # Command Line
 clap = { version = "4.5", features = ["derive"] }
 
