--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,4 @@
 # Generated from templates
 /src/data/compile_info.rs
 /setup/windows/setup_jv_cli.iss
-/src/subcmd/cmds/_registry.rs
+/src/cmd/cmds/_registry.rs
