--- a/templates/_registry.rs.template
+++ b/templates/_registry.rs.template
@@ -6,13 +6,21 @@ use crate::cmd::errors::CmdProcessError;
 pub async fn jv_cmd_process_node(
     node: &str,
     args: Vec<String>,
-    ctx: JVCommandContext
+    ctx: JVCommandContext,
+    renderer_override: String
 ) -> Result<crate::cmd::renderer::JVRenderResult, crate::cmd::errors::CmdProcessError> {
     match node {
 // PROCESS
 // -- TEMPLATE START --
         // Command `<<KEY>>`
-        "<<NODE_NAME>>" => return crate::<<COMMAND_TYPE>>::process(args, ctx).await,
+        "<<NODE_NAME>>" => {
+            return crate::<<COMMAND_TYPE>>::process_with_renderer_flag(
+                args,
+                ctx,
+                renderer_override
+            )
+            .await;
+        }
 // -- TEMPLATE END --
         _ => {}
     }
