Add pre-build validation to deployment scripts

--- a/templates/setup_jv_cli.iss.template
+++ b/templates/setup_jv_cli.iss.template
@@ -17,7 +17,7 @@ AllowNoIcons=yes
 LicenseFile=..\..\LICENSE
 PrivilegesRequired=lowest
 OutputDir=..\..\.temp\
-OutputBaseFilename=JustEnoughVCS For Windows
+OutputBaseFilename=JustEnoughVCS_Windows_<<<VERSION>>>
 SetupIconFile=..\..\resources\images\Yizi.ico
 SolidCompression=yes
 WizardStyle=modern dynamic
