Update installer license file to LICENSE-MIT

--- a/templates/setup_jv_cli.iss.template
+++ b/templates/setup_jv_cli.iss.template
@@ -14,7 +14,7 @@ AppUpdatesURL={#MyAppURL}
 DefaultDirName={autopf}\{#MyAppName}
 DefaultGroupName={#MyAppName}
 AllowNoIcons=yes
-LicenseFile=..\..\LICENSE
+LicenseFile=..\..\LICENSE-MIT
 PrivilegesRequired=lowest
 OutputDir=..\..\.temp\
 OutputBaseFilename=JustEnoughVCS_Windows_<<<VERSION>>>
