Update command registration to auto-discover commands
Commands in `./src/cmds/` are now automatically registered. The
`[cmd]` section in `.cargo/registry.toml` is now only for overriding
or registering commands outside the auto-discovery path.

--- a/.cargo/registry.toml
+++ b/.cargo/registry.toml
@@ -2,13 +2,19 @@
 ### Commands ###
 ################
 
-[cmd.status]
-node = "status"
-type = "cmds::status::JVStatusCommand"
+# The system will automatically register commands under ./src/cmds/.
+# This section is mainly for registering commands not in the automatic registration directory.
+
+# [cmd.name]
+# node = "name"
+# type = "your_command::JVUnknownCommand"
 
 #################
 ### Renderers ###
 #################
+
+# Only register renderers here that need to be overridden using the `--renderer` flag.
+# After registration, you can use the format `command --renderer renderer_name` to override the renderer.
 
 # Default Renderer
 [renderer.default]
