--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,9 @@ panic = "abort"
 strip = true
 
 [build-dependencies]
+# Just Enough VCS String Formatter
+string_proc = { path = "../VersionControl/utils/string_proc/" }
+
 chrono = "0.4"
 toml = "0.9"
 
