Split prepare phase into prepare and collect
- Prepare now handles argument-to-input conversion only
- Collect handles resource gathering and data collection
- Status command updated to use new two-phase structure
- Command system trait modified to support separate phases

--- a/.cargo/registry.toml
+++ b/.cargo/registry.toml
@@ -40,6 +40,9 @@ path = "src/outputs.rs"
 [collect.inputs]
 path = "src/inputs.rs"
 
+[collect.collects]
+path = "src/collects.rs"
+
 [collect.cmds]
 path = "src/cmds.rs"
 
