--- a/templates/setup_jv_cli.iss.template
+++ b/templates/setup_jv_cli.iss.template
@@ -14,11 +14,11 @@ AppUpdatesURL={#MyAppURL}
 DefaultDirName={autopf}\{#MyAppName}
 DefaultGroupName={#MyAppName}
 AllowNoIcons=yes
-LicenseFile=..\..\LICENSE-MIT
+LicenseFile=..\..\..\LICENSE-MIT
 PrivilegesRequired=lowest
-OutputDir=..\..\.temp\
+OutputDir=..\..\..\.temp\
 OutputBaseFilename=JustEnoughVCS_Windows_<<<VERSION>>>
-SetupIconFile=..\..\resources\images\Yizi.ico
+SetupIconFile=..\..\..\resources\images\Yizi.ico
 SolidCompression=yes
 WizardStyle=modern dynamic
 
@@ -26,7 +26,7 @@ WizardStyle=modern dynamic
 Name: "english"; MessagesFile: "compiler:Default.isl"
 
 [Files]
-Source: "..\..\.temp\deploy\*"; Excludes: "setup"; DestDir: "{app}"; Flags: ignoreversion recursesubdirs createallsubdirs
+Source: "..\..\..\.temp\deploy\*"; Excludes: "setup"; DestDir: "{app}"; Flags: ignoreversion recursesubdirs createallsubdirs
 Source: "inst.ps1"; DestDir: "{app}\scripts\"; Flags: ignoreversion
 Source: "uninst.ps1"; DestDir: "{app}\scripts\"; Flags: ignoreversion
 
