Add command aliases, error handling improvements, and flag aliases
- Add aliases for status command: sign, sheet, sheet.add, drop, drop.cat
- Improve error handling with detailed localized messages for prepare,
  execute, and render phases
- Add flag aliases: -L for --lang and -R for --renderer
- Implement similar command suggestions using Levenshtein distance
- Fix command matching logic to avoid ambiguous prefix issues

--- a/.cargo/registry.toml
+++ b/.cargo/registry.toml
@@ -9,6 +9,26 @@
 # node = "name"
 # type = "your_command::JVUnknownCommand"
 
+[cmd.sign]
+node = "sign"
+type = "cmds::status::JVStatusCommand"
+
+[cmd.sheet]
+node = "sheet"
+type = "cmds::status::JVStatusCommand"
+
+[cmd.sheet_add]
+node = "sheet.add"
+type = "cmds::status::JVStatusCommand"
+
+[cmd.drop]
+node = "drop"
+type = "cmds::status::JVStatusCommand"
+
+[cmd.drop_cat]
+node = "drop.cat"
+type = "cmds::status::JVStatusCommand"
+
 #################
 ### Renderers ###
 #################
