Add GitHub Actions workflow for cross-platform deployment

--- a/templates/setup_jv_cli.iss.template
+++ b/templates/setup_jv_cli.iss.template
@@ -17,7 +17,7 @@ AllowNoIcons=yes
 LicenseFile=..\..\..\LICENSE-MIT
 PrivilegesRequired=lowest
 OutputDir=..\..\..\.temp\
-OutputBaseFilename=JustEnoughVCS_Windows_<<<VERSION>>>
+OutputBaseFilename=JustEnoughVCS_Windows
 SetupIconFile=..\..\..\resources\images\Yizi.ico
 SolidCompression=yes
 WizardStyle=modern dynamic
