--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["JustEnoughVCS Team"]
 homepage = "https://github.com/JustEnoughVCS/CommandLine/"
 
 [workspace]
-members = ["tools/build_helper"]
+members = ["utils/", "tools/build_helper"]
 
 [workspace.package]
 version = "0.1.0-dev"
@@ -41,6 +41,9 @@ toml = "0.9"
 # Just Enough VCS
 just_enough_vcs = { path = "../VersionControl", features = ["all"] }
 
+# CommandLine Utilities
+cli_utils = { path = "utils" }
+
 # Error
 thiserror = "2.0.17"
 
@@ -56,14 +59,12 @@ chrono = "0.4"
 
 # Logging
 log = "0.4"
-env_logger = "0.11"
 
 # Async
 tokio = { version = "1", features = ["full"] }
 
 # Display
 colored = "3.0"
-strip-ansi-escapes = "0.2.1"
 
 # Terminal
 crossterm = "0.27"
@@ -71,9 +72,5 @@ crossterm = "0.27"
 # i18n
 rust-i18n = "3"
 
-# Regex
-regex = "1.12.1"
-
 # File & Directory
 walkdir = "2.5.0"
-dirs = "6.0.0"
