--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
 chrono = "0.4"
 toml = "0.9"
 regex = "1.12"
+just_template = "0.1.0"
 
 [dependencies]
 # Just Enough VCS
