--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,6 +84,7 @@ tokio = { version = "1", features = ["full"] }
 
 # Display
 colored = "3.0"
+just_progress = "0.1.1"
 
 # Terminal
 crossterm = "0.27"
